--- a/Sendmail.html
+++ b/Sendmail.html
@@ -12,7 +12,7 @@
 		<h1>Send Report</h1>
 		<div class="seperator" style="position: absolute; left: 40px; top: 100px;  width: 500px;"></div>
 		<div class="seperator[]" style="position: absolute;  top: 130px;  left: 600px; width: 2px; height: 400px;"></div>
-		<form method="post" action="login.php" >
+		<form method="post" action="mail.php" >
 			<input type="email" style=" background: white; position: absolute; top: 150px; width: 400px;" required title="Email required" placeholder="To" data-icon="E" id="email" name="email">
 			<input type="text" style=" background: white; position: absolute; top: 220px; width: 500px;" required title="Subject required" placeholder="Subject" data-icon="S" id="subject" name="subject">
 			<textarea rows="10" cols="50" style=" background: white; position: absolute; top: 300px; width: 500px; height: 200px; " required title="Message required" placeholder="Message" data-icon="M" id="message" name="Message"></textarea>
