--- a/MSRFForm.html
+++ b/MSRFForm.html
@@ -19,11 +19,11 @@
 		<div class="infobar">General Information</div>
     <div class="seperatorS" style="position: absolute; top: 180px; left: 65px; height: 1px; width: 500px;"></div>
 		
-		<form method="post" action="msrform.php" >
-			<input type="text" required title="Name required" placeholder="Name" data-icon="F" id="first_name" name="first_name"></br>
-        	<input type="text" required title="Sample Code required" placeholder="Sample Code" data-icon="L" id="last_name" name="last_name">
-        	<input type="text" required title="Phone No. required" placeholder="Phone Number"  style="position: absolute; top: 280px; left: 465px; width: 250px;" data-icon="R" id="roll_no" name="roll_no">
-        	<input type="text" required title="Research Group required" placeholder="Research Group" style="position: absolute; top: 375px; left: 610px; width: 210px;" data-icon="S" id="sic_code" name="sic_code"></br>
+		<form method="post" action="form.php" >
+			<input type="text" required title="Name required" placeholder="Name" data-icon="N" id="name" name="name"></br>
+        	<input type="text" required title="Sample Code required" placeholder="Sample Code" data-icon="S" id="scode" name="scode">
+        	<input type="text" required title="Phone No. required" placeholder="Phone Number"  style="position: absolute; top: 280px; left: 465px; width: 250px;" data-icon="P" id="phone_no" name="phone_no">
+        	<input type="text" required title="Research Group required" placeholder="Research Group" style="position: absolute; top: 375px; left: 610px; width: 210px;" data-icon="S" id="rgroup" name="rgroup"></br>
         	<div class="Date">Date: </div>
         	<select name="dob_month" id="dob_month" class="input_pulldown" style="width: 100px position: absolute; top:200px; left:645px;">
  				<option value="0">Month</option><option value="1">January</option><option value="2">February</option><option value="3">March</option>               <option value="4">April</option><option value="5">May</option><option value="6" selected="selected">June</option><option value="7">July</option>    <option value="8">August</option><option value="9">September</option><option value="10">October</option><option value="11">November</option>        <option value="12">December</option>
@@ -56,12 +56,12 @@
 
         	<div class="infobar" style="position: absolute; top: 475px; left: 50px;">Sample Information</div>
 
-        	<input type="text" required title="Hazards" placeholder="Hazards" data-icon="F" id="first_name" style="position: absolute; top: 635px; left: 50px; width: 470px;" name="first_name">
+        	<input type="text" required title="Hazards" placeholder="Hazards" data-icon="H" id="hazard" style="position: absolute; top: 635px; left: 50px; width: 470px;" name="hazard">
         	<div class="infobar" style="position: absolute; top: 645px; left: 580px; width: 80px;">(if any)</div>	
         	</br>
 
-        	<input type="text" required title="Molecular Formula required" placeholder="Molecular Formula" data-icon="L" id="last_name" style="position: absolute; top: 725px; left: 50px; width: 370px;" name="last_name">
-        	<input type="text" required title="Molecular Weight required" placeholder="Molecular Weight" data-icon="L" id="last_name" style="position: absolute; top: 725px; left: 520px; width: 170px;" name="last_name">	
+        	<input type="text" required title="Molecular Formula required" placeholder="Molecular Formula" data-icon="M" id="mformula" style="position: absolute; top: 725px; left: 50px; width: 370px;" name="mformula">
+        	<input type="text" required title="Molecular Weight required" placeholder="Molecular Weight" data-icon="W" id="mweight" style="position: absolute; top: 725px; left: 520px; width: 170px;" name="mweight">	
         	<div class="infobar" style="position: absolute; top: 735px; left: 750px; width: 80px;">Daltons</div>
 
           <div class="seperatorS" style="position: absolute; top: 865px; left: 85px; height: 1px; width: 500px;"></div>
