--- a/NMRFacility.html
+++ b/NMRFacility.html
@@ -20,13 +20,13 @@
     <div class="seperatorS" style="position: absolute; top: 180px; left: 65px; height: 1px; width: 500px;"></div>
 		
 		<form method="post" action="msrform.php" >
-			<input type="text" required title="Name required" placeholder="Name" data-icon="N" id="name" name="name"></br>
-        	<input type="text" required title="Sample Code required" placeholder="Sample Code" data-icon="S" id="scode" name="scode">
-        	<input type="text" required title="Sample Amount required" placeholder="Sample Amount"  style="position: absolute; top: 280px; left: 465px; width: 250px;" data-icon="A" id="samount" name="samount">
+			<input type="text" required title="Name required" placeholder="Name" data-icon="F" id="first_name" name="first_name"></br>
+        	<input type="text" required title="Sample Code required" placeholder="Sample Code" data-icon="L" id="last_name" name="last_name">
+        	<input type="text" required title="Sample Amount required" placeholder="Sample Amount"  style="position: absolute; top: 280px; left: 465px; width: 250px;" data-icon="R" id="roll_no" name="roll_no">
           <div class="infobar" style="position: absolute; top: 295px; left: 771px; width: 80px;">(mg)</div>
-          <input type="text" required title="Solvent required" placeholder="Solvent"  style="position: absolute; top: 380px; left: 50px; width: 300px;" data-icon="V" id="solvent" name="solvent">
-        	<input type="text" required title="Molecular Formula required" placeholder="Molecular Formula" style="position: absolute; top: 375px; left: 465px; width: 310px;" data-icon="F" id="mformula" name="mformula"></br>
-          <input type="text" required title="Details required" placeholder="Requested Experiment"  style="position: absolute; top: 470px; left: 50px; width: 725px; height: 50px;" data-icon="D" id="details" name="details">
+          <input type="text" required title="Solvent required" placeholder="Solvent"  style="position: absolute; top: 380px; left: 50px; width: 300px;" data-icon="R" id="roll_no" name="roll_no">
+        	<input type="text" required title="Molecular Formula required" placeholder="Molecular Formula" style="position: absolute; top: 375px; left: 465px; width: 310px;" data-icon="S" id="sic_code" name="sic_code"></br>
+          <input type="text" required title="Details required" placeholder="Requested Experiment"  style="position: absolute; top: 470px; left: 50px; width: 725px; height: 50px;" data-icon="R" id="roll_no" name="roll_no">
         	<div class="Date">Date: </div>
         	<select name="dob_month" id="dob_month" class="input_pulldown" style="width: 100px position: absolute; top:200px; left:645px;">
  				<option value="0">Month</option><option value="1">January</option><option value="2">February</option><option value="3">March</option>               <option value="4">April</option><option value="5">May</option><option value="6" selected="selected">June</option><option value="7">July</option>    <option value="8">August</option><option value="9">September</option><option value="10">October</option><option value="11">November</option>        <option value="12">December</option>
@@ -44,7 +44,7 @@
 
         	<div class="infobar" style="position: absolute; top: 585px; left: 50px;">Molecular Structure</div>
           <input type="text" 
-          <input type="text" style="position: absolute; top: 650px; left: 40px; width: 850px; height: 350px;" required title="Molecular Structure" data-icon="R" id="mstructure" name="mstructure">         
+          <input type="text" style="position: absolute; top: 650px; left: 40px; width: 850px; height: 350px;" required title="Molecular Structure" data-icon="F" id="first_name" name="first_name">         
  
            <div class="note" style="left: 80px;">Note: Users are requested to submit 5-10 mg sample for Proton NMR and 30-40 mg for carbon NMR.</div>
 
