--- a/SingleCrystalXRay.html
+++ b/SingleCrystalXRay.html
@@ -22,10 +22,10 @@
     <div class="seperatorS" style="position: absolute; top: 180px; left: 65px; height: 1px; width: 500px;"></div>
 		
 		<form method="post" action="msrform.php" >
-			<input type="text" required title="User Name required" placeholder="User Name" data-icon="N" id="uname" name="uname"></br>
-        	<input type="text" required title="Supervisor required" placeholder="Supervisor Name" data-icon="S" id="sname" name="sname">
-        	<input type="text" required title="Phone No. required" placeholder="Phone Number"  style="position: absolute; top: 280px; left: 465px; width: 250px;" data-icon="P" id="phone_no" name="phone_no">
-        	<input type="text" required title="User Code required" placeholder="User Code" style="position: absolute; top: 375px; left: 610px; width: 210px;" data-icon="U" id="user_code" name="user_code"></br>
+			<input type="text" required title="User Name required" placeholder="User Name" data-icon="F" id="first_name" name="first_name"></br>
+        	<input type="text" required title="Supervisor required" placeholder="Supervisor Name" data-icon="L" id="last_name" name="last_name">
+        	<input type="text" required title="Phone No. required" placeholder="Phone Number"  style="position: absolute; top: 280px; left: 465px; width: 250px;" data-icon="R" id="roll_no" name="roll_no">
+        	<input type="text" required title="User Code required" placeholder="User Code" style="position: absolute; top: 375px; left: 610px; width: 210px;" data-icon="S" id="sic_code" name="sic_code"></br>
         	<div class="Date">Date: </div>
         	<select name="dob_month" id="dob_month" class="input_pulldown" style="width: 100px position: absolute; top:200px; left:645px;">
  				<option value="0">Month</option><option value="1">January</option><option value="2">February</option><option value="3">March</option>               <option value="4">April</option><option value="5">May</option><option value="6" selected="selected">June</option><option value="7">July</option>    <option value="8">August</option><option value="9">September</option><option value="10">October</option><option value="11">November</option>        <option value="12">December</option>
@@ -61,23 +61,23 @@
 
         	<div class="infobar" style="position: absolute; top: 475px; left: 50px;">Crystal Information</div>
 
-        	<input type="text" required title="Color" placeholder="Color" data-icon="C" id="color" style="position: absolute; top: 635px; left: 520px; width: 270px;" name="color">
+        	<input type="text" required title="Color" placeholder="Color" data-icon="F" id="first_name" style="position: absolute; top: 635px; left: 520px; width: 270px;" name="first_name">
         	</br>
-        	<input type="text" required title="Melting Point required" placeholder="Melting Point" data-icon="M" id="mpoint" style="position: absolute; top: 725px; left: 50px; width: 170px;" name="mpoint">
+        	<input type="text" required title="Melting Point required" placeholder="Melting Point" data-icon="L" id="last_name" style="position: absolute; top: 725px; left: 50px; width: 170px;" name="last_name">
           <div class="infobar" style="position: absolute; top: 740px; left: 275px; width: 80px;">&#176C</div>
         	
-          <input type="text" required title="Information required" placeholder="Starting material and Solvent Information" data-icon="I" id="info" style="position: absolute; top: 815px; left: 50px; width: 750px; " name="info">
+          <input type="text" required title="Information required" placeholder="Starting material and Solvent Information" data-icon="L" id="last_name" style="position: absolute; top: 815px; left: 50px; width: 750px; " name="last_name">
 
           <div class="infobar" style="top: 910px; width: 400px;">Structural Formula and Expected Structure</div>
           <div class="seperatorS" style="position: absolute; top: 950px; left: 65px; height: 1px; width: 500px;"></div>
           <div class="note" style="top: 955px; left: 75px;">(*) (or as close to expected as possible. Indicate the desired atom-labeling scheme as well)</div>
 
-          <input type="text" required title="Structural Formula and Expected Structure" placeholder="" data-icon="D" id="daigram" style="position: absolute; top: 985px; left: 45px; width: 755px; height: 150px;" name="diagram">
+          <input type="text" required title="Structural Formula and Expected Structure" placeholder="" data-icon="F" id="first_name" style="position: absolute; top: 985px; left: 45px; width: 755px; height: 150px;" name="first_name">
 
           <div class="infobar" style="top: 1190px; ">Official Details</div>
           <div class="seperatorS" style="position: absolute; top: 1230px; left: 65px; height: 1px; width: 500px;"></div>
 
-          <input type="text" required title="SIC Code required" placeholder="SIC Code" style="position: absolute; top: 1255px; left: 50px; width: 210px;" data-icon="O" id="sic_code" name="sic_code"></br>
+          <input type="text" required title="SIC Code required" placeholder="SIC Code" style="position: absolute; top: 1255px; left: 50px; width: 210px;" data-icon="S" id="sic_code" name="sic_code"></br>
 
           <div class="Date" style="top: 1265px; left: 400px;">Date* : </div>
            <div class="note" style="top: 1320px; left: 410px;">(*) of submission.</div>
